--- a/index.html
+++ b/index.html
@@ -10,16 +10,10 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{product}}</h1>
-      <p>{{description}}</p>
+      <h1>Product goes here</h1>
     </div>
 
-    <!-- Import APP -->
+    <!-- Import Js -->
     <script src="./main.js"></script>
-
-     <!-- Import APP -->
-    <script>
-      const mountedApp = app.mount('#app');
-    </script>
   </body>
 </html>
